--- a/css/style.css
+++ b/css/style.css
@@ -86,9 +86,7 @@ body{
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    padding-top: 25px;
-    padding-bottom: 25px;
-    
+        
 }
 .color{
     color: var(--navy-blue);
@@ -101,6 +99,8 @@ body{
 .site-nav{
     display: flex;
     gap: 40px;
+    padding-top: 24px;
+    padding-bottom: 24px;
 }
 .link-nav.link{
     color:var(--navy-blue);
@@ -140,6 +140,9 @@ body{
 .hero-container{
     background: var(--navy-blue);
     padding: 188px 0;
+    margin-bottom: 120px;
+    width: 100%;
+    max-width: 1440px;
 }
 .hero-title{
         color: var(--white);
@@ -148,9 +151,11 @@ body{
         font-weight: 700;
         line-height:1.07;
         letter-spacing: 0.02em;
+        padding-bottom: 48px;
         margin: 0 auto;
         max-width: 496px
-        }
+        
+    }
 .link-button{
         color: var(--white);
         font-size: 16px;
@@ -160,11 +165,25 @@ body{
         letter-spacing: 0.04em;
         background: var(--iris);
         cursor:pointer;
-        }
+        display: block;
+        margin: 0 auto;
+        padding: 16px 32px;
+        border-radius: 4px;
+            
+     }
 .link-button:hover,.link-button:focus{
     background-color: var(--ocean);
 }
 /*  Section credo,work,team */
+.section-list{
+    display: flex;
+    align-content: space-between;
+    gap: 24px;
+    padding-bottom: 120px;
+    }
+.list-item{
+    width: calc((100% - 24px * 3) / 4);
+}
 .section-team{
     background-color:var(--cloud);
 }
@@ -176,7 +195,10 @@ body{
         line-height: 1.11;
         letter-spacing: 0.02em;
         text-transform: capitalize;
-    }
+        max-width: 323px;
+        margin: 0 auto;
+        padding-bottom: 72px;
+           }
     .list-team{
         background-color: var(--white);
     }
@@ -186,6 +208,7 @@ body{
         font-weight: 500;
         line-height: 1.2;
         letter-spacing: 0.02em;
+        margin-bottom: 8px;
 }
 .list-text{
         color: var(--slate);
