--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,7 @@ body{
     font-family:"Roboto",sans-serif;
     color:var(--slate);
     background-color:var(--white);
+    
 }
 .container{
     width: 100%;
@@ -99,8 +100,7 @@ body{
 .site-nav{
     display: flex;
     gap: 40px;
-    padding-top: 24px;
-    padding-bottom: 24px;
+    
 }
 .link-nav.link{
     color:var(--navy-blue);
@@ -137,12 +137,13 @@ body{
 /** --------Hero section ----*/
 
 
+.hero-section{
+background: var(--navy-blue);
+padding: 188px 0;
+}
 .hero-container{
-    background: var(--navy-blue);
-    padding: 188px 0;
-    margin-bottom: 120px;
-    width: 100%;
-    max-width: 1440px;
+       
+   
 }
 .hero-title{
         color: var(--white);
@@ -175,11 +176,13 @@ body{
     background-color: var(--ocean);
 }
 /*  Section credo,work,team */
+.section-work{
+    padding-bottom: 120px;
+}
 .section-list{
     display: flex;
     align-content: space-between;
     gap: 24px;
-    padding-bottom: 120px;
     }
 .list-item{
     width: calc((100% - 24px * 3) / 4);
@@ -187,11 +190,11 @@ body{
 }
 .section-team{
     background-color:var(--cloud);
+    padding: 120px 0;
       
 }
 .team-container{
-     padding-top: 120px;
-     padding-bottom: 120px;
+   
 }
 .section-title{
         color: var(--navy-blue);
@@ -214,8 +217,7 @@ body{
     .list-team{
         background-color: var(--white);
         text-align: center;
-        
-               
+     
     }
 .list-title{
         color: var(--navy-blue);
@@ -239,6 +241,10 @@ body{
 
 .footer{
         background-color:var(--navy-blue);
+       
+}
+.footer-container{
+   
 }
 .logo-footer{
     color: var(--iris);
