--- a/css/style.css
+++ b/css/style.css
@@ -170,12 +170,16 @@ padding: 188px 0;
         margin: 0 auto;
         padding: 16px 32px;
         border-radius: 4px;
-            
+                    
      }
 .link-button:hover,.link-button:focus{
     background-color: var(--ocean);
 }
 /*  Section credo,work,team */
+.section-credo{
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
 .section-work{
     padding-bottom: 120px;
 }
@@ -241,6 +245,7 @@ padding: 188px 0;
 
 .footer{
         background-color:var(--navy-blue);
+        padding: 101.5px;
        
 }
 .footer-container{
@@ -254,6 +259,7 @@ padding: 188px 0;
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
+    padding-left: 0;
 }
 .color-footer{
         color:var(--cloud);
@@ -268,7 +274,11 @@ padding: 188px 0;
         font-size: 16px;
         line-height:1.5;
         letter-spacing: 0.02em;
-}
+        display: flex;
+        width: 100%;
+        max-width: 264px;
+        margin-top: 16px;
+      }
 
 
 
