--- a/css/style.css
+++ b/css/style.css
@@ -284,10 +284,20 @@ padding: 188px 0;
 
 /* ----------_________PORTFOLIO___________-------- */
 
-.portfoilo-section {}
+.portfoilo-section {
+ 
+}
 
-.list-btn {}
-
+.list-btn {
+    display: flex;
+    padding-top: 96px;
+    padding-bottom: 72px;
+    gap: 24px;
+    justify-content: center;
+}
+.btn-item{
+    
+}
 .portfolio-btn {
         color:var(--iris);
         text-align: center;
@@ -298,6 +308,10 @@ padding: 188px 0;
         letter-spacing: 0.04em;
         background-color:var(--cloud);
         cursor: pointer;
+        padding: 12px 24px;
+        border-radius: 4px;
+        border: 1px solid var(--cornflower);
+        background: var(--cloud);
 }
 .portfolio-btn:hover,.portfolio-btn:focus{
         color:var(--white);
@@ -306,16 +320,29 @@ padding: 188px 0;
 
 .presentation {}
 
-.list-presentation {}
+.list-presentation {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 48px 24px;
+    margin-bottom: 120px;
+}
 
-.list-made {}
-
+.list-made {
+    width: calc((100% - 48px) / 3) ;
+    border: 1px solid var(--cornflower);
+    background: var(--white);
+}
+.portfolio-img{
+    display: block;
+    max-width: 100%;
+}
 .title-portfolio {
         color:var(--navy-blue);
         font-size: 20px;
         font-weight: 500;
         line-height: 1.2;
         letter-spacing: 0.02em;
+        margin: 32px 16px 8px 16px;
 }
 
 .text-portfolio {
@@ -323,4 +350,7 @@ padding: 188px 0;
         font-size: 16px;
         line-height:1.5;
         letter-spacing: 0.02em;
+        margin-bottom: 32px;
+        margin-left: 16px;
+        margin-right: 16px;
 }
