--- a/css/style.css
+++ b/css/style.css
@@ -61,8 +61,7 @@ body{
 /* ----header---- */
 .header{
     background-color: var(--white);
-    padding-top: 24px;
-    padding-bottom: 24px;
+    padding: 24px 0;
     border-bottom: 1px solid var(--cornflower, #E7E9FC);
     }
 .container-header{
@@ -74,7 +73,7 @@ body{
 .navigation{
     display: flex;
     align-items: center;
-    margin-left: auto;
+    margin-left: auto; 
     justify-content: space-between;
     gap: 76px;
     }
@@ -87,7 +86,7 @@ body{
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-        
+     margin-right: 76px;   
 }
 .color{
     color: var(--navy-blue);
@@ -101,6 +100,9 @@ body{
     display: flex;
     gap: 40px;
     
+}
+.list-nav{
+    padding: 24px 0;
 }
 .link-nav.link{
     color:var(--navy-blue);
@@ -122,6 +124,7 @@ body{
 .contacts-item{
     display: flex;
     gap: 40px;
+    
 }
 .contacts-item .contact-link{
     color: var(--slate);
