--- a/css/style.css
+++ b/css/style.css
@@ -300,13 +300,12 @@ padding: 188px 0;
 /* ----------_________PORTFOLIO___________-------- */
 
 .portfoilo-section {
- 
+padding: 96px 0 120px 0;
 }
 
 .list-btn {
     display: flex;
-    padding-top: 96px;
-    padding-bottom: 72px;
+    margin-bottom: 72px;
     gap: 24px;
     justify-content: center;
 }
@@ -314,23 +313,24 @@ padding: 188px 0;
     
 }
 .portfolio-btn {
-        color:var(--iris);
-        text-align: center;
-         font-size: 16px;
-        font-family:inherit;
-        font-weight: 500;
-        line-height: 1.5;
-        letter-spacing: 0.04em;
-        background-color:var(--cloud);
-        cursor: pointer;
-        padding: 12px 24px;
-        border-radius: 4px;
-        border: 1px solid var(--cornflower);
-        background: var(--cloud);
+    color:var(--iris);
+    text-align: center;
+     font-size: 16px;
+    font-family:inherit;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    background-color:var(--cloud);
+    cursor: pointer;
+    padding: 12px 24px;
+    border-radius: 4px;
+    border: 1px solid var(--cornflower);
+    background: var(--cloud);
 }
 .portfolio-btn:hover,.portfolio-btn:focus{
         color:var(--white);
         background-color: var(--ocean);
+        border: 1px solid transparent;
 }
 
 .presentation {}
@@ -339,17 +339,22 @@ padding: 188px 0;
     display: flex;
     flex-wrap: wrap;
     gap: 48px 24px;
-    margin-bottom: 120px;
+   
 }
 
 .list-made {
     width: calc((100% - 48px) / 3) ;
-    border: 1px solid var(--cornflower);
     background: var(--white);
 }
 .portfolio-img{
     display: block;
     max-width: 100%;
+}
+.categories{
+    padding: 32px 16px;
+    border: 1px solid var(--cornflower);
+    border-top: none;
+    margin-bottom: 8px;
 }
 .title-portfolio {
         color:var(--navy-blue);
@@ -357,7 +362,7 @@ padding: 188px 0;
         font-weight: 500;
         line-height: 1.2;
         letter-spacing: 0.02em;
-        margin: 32px 16px 8px 16px;
+        margin: 32px 16px 8px 16px; 
 }
 
 .text-portfolio {
@@ -365,7 +370,5 @@ padding: 188px 0;
         font-size: 16px;
         line-height:1.5;
         letter-spacing: 0.02em;
-        margin-bottom: 32px;
-        margin-left: 16px;
-        margin-right: 16px;
+        
 }
