--- a/css/style.css
+++ b/css/style.css
@@ -63,22 +63,19 @@ body{
 /* ----header---- */
 .header{
     background-color: var(--white);
-    padding: 24px 0;
     border-bottom: 1px solid var(--cornflower, #E7E9FC);
     }
 .container-header{
     display: flex;
     align-items: center;
-    gap: 332px;
+    justify-content: space-between;
     
 }
 .navigation{
     display: flex;
     align-items: center;
-    margin-left: auto; 
-    justify-content: space-between;
-    gap: 76px;
-    }
+     
+}
 .header-logo{
     color: var(--iris);
     font-size: 18px;
@@ -88,7 +85,8 @@ body{
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-     margin-right: 76px;   
+     margin-right: 76px;
+     padding: 25px 0;   
 }
 .color{
     color: var(--navy-blue);
@@ -108,6 +106,8 @@ body{
 }
  .link-nav{
     padding: 24px 0;
+    display: block;
+    
  }
 .link-nav.link{
     color:var(--navy-blue);
@@ -130,14 +130,18 @@ body{
 .contacts-item{
     display: flex;
     gap: 40px;
-    margin-left:0 auto;
-    
+        
+}
+.cont-info{
+  
+   
 }
 .contacts-item .contact-link{
     color: var(--slate);
     font-size: 16px;
     line-height: 1.5;
     letter-spacing:0.02em;
+    padding: 24px 0;
     }
 .contact-link:active,
 .contact-link:hover,
@@ -162,7 +166,7 @@ padding: 188px 0;
         font-weight: 700;
         line-height:1.07;
         letter-spacing: 0.02em;
-        padding-bottom: 48px;
+        margin-bottom: 48px;
         margin: 0 auto;
         max-width: 496px
         
@@ -199,9 +203,11 @@ padding: 188px 0;
 
 .section-list{
     display: flex;
-    align-content: space-between;
-    gap: 24px;
+     gap: 24px;
     }
+.list-img{
+    width: calc((100% - 48px) / 3);
+}   
 .list-item{
     width: calc((100% - 24px * 3) / 4);
     
@@ -222,14 +228,12 @@ padding: 188px 0;
         line-height: 1.11;
         letter-spacing: 0.02em;
         text-transform: capitalize;
-        max-width: 324px;
-        margin: 0 auto;
-        margin-bottom: 72px;
+         margin-bottom: 72px;
      }
     .section-list-team{
         display: flex;
         gap: 24px;
-        justify-content: space-between;
+        
         
     }
     .list-team{
@@ -299,7 +303,7 @@ padding: 188px 0;
         display: flex;
         width: 100%;
         max-width: 264px;
-        margin-top: 16px;
+        
       }
 
 
@@ -351,7 +355,7 @@ padding: 96px 0 120px 0;
 
 .list-made {
     width: calc((100% - 48px) / 3) ;
-    background: var(--white);
+    
 }
 .portfolio-img{
     display: block;
